@@ -103,7 +103,7 @@ public class ActiveRepairServiceTest
         Set<InetAddress> neighbors = new HashSet<>();
         for (Range<Token> range : ranges)
         {
-            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, range, null, null));
+            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, ranges, range, null, null));
         }
         assertEquals(expected, neighbors);
     }
@@ -126,7 +126,7 @@ public class ActiveRepairServiceTest
         Set<InetAddress> neighbors = new HashSet<>();
         for (Range<Token> range : ranges)
         {
-            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, range, null, null));
+            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, ranges, range, null, null));
         }
         assertEquals(expected, neighbors);
     }
@@ -148,7 +148,7 @@ public class ActiveRepairServiceTest
         Set<InetAddress> neighbors = new HashSet<>();
         for (Range<Token> range : ranges)
         {
-            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, range, Arrays.asList(DatabaseDescriptor.getLocalDataCenter()), null));
+            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, ranges, range, Arrays.asList(DatabaseDescriptor.getLocalDataCenter()), null));
         }
         assertEquals(expected, neighbors);
     }
@@ -176,7 +176,7 @@ public class ActiveRepairServiceTest
         Set<InetAddress> neighbors = new HashSet<>();
         for (Range<Token> range : ranges)
         {
-            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, range, Arrays.asList(DatabaseDescriptor.getLocalDataCenter()), null));
+            neighbors.addAll(ActiveRepairService.getNeighbors(KEYSPACE5, ranges, range, Arrays.asList(DatabaseDescriptor.getLocalDataCenter()), null));
         }
         assertEquals(expected, neighbors);
     }
@@ -197,10 +197,11 @@ public class ActiveRepairServiceTest
 
         expected.remove(FBUtilities.getBroadcastAddress());
         Collection<String> hosts = Arrays.asList(FBUtilities.getBroadcastAddress().getCanonicalHostName(),expected.get(0).getCanonicalHostName());
+        Collection<Range<Token>> ranges = StorageService.instance.getLocalRanges(KEYSPACE5);
 
-       assertEquals(expected.get(0), ActiveRepairService.getNeighbors(KEYSPACE5,
-                                                                      StorageService.instance.getLocalRanges(KEYSPACE5).iterator().next(),
-                                                                      null, hosts).iterator().next());
+        assertEquals(expected.get(0), ActiveRepairService.getNeighbors(KEYSPACE5, ranges,
+                                                                       ranges.iterator().next(),
+                                                                       null, hosts).iterator().next());
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -209,7 +210,8 @@ public class ActiveRepairServiceTest
         addTokens(2 * Keyspace.open(KEYSPACE5).getReplicationStrategy().getReplicationFactor());
         //Dont give local endpoint
         Collection<String> hosts = Arrays.asList("127.0.0.3");
-        ActiveRepairService.getNeighbors(KEYSPACE5, StorageService.instance.getLocalRanges(KEYSPACE5).iterator().next(), null, hosts);
+        Collection<Range<Token>> ranges = StorageService.instance.getLocalRanges(KEYSPACE5);
+        ActiveRepairService.getNeighbors(KEYSPACE5, ranges, ranges.iterator().next(), null, hosts);
     }
 
     Set<InetAddress> addTokens(int max) throws Throwable
